--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,25 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+
   <title>Saad Al Amin</title>
+  <!-- App Meta Information -->
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+  <meta name="viewport" content="width=device-width">
+  <!-- App Information -->
+  <meta name="title" content="Saad Al Amin" />
+  <link rel="shortcut icon" href="image/saad.jpg" type="image/png" />
+  <link rel="icon" href="image/saad.jpg" type="image/png" />
+  <meta name="description" content="I am Saad Al Amin. A simple human being on this earth. I have so many dream's.  I want to be a Proper Human being. Also I will try to help all those people who needs help for making their CREATIVE dream's come truth.
+  Do it But Do Something New And Be Creative - Saad Al Amin" />
+  <meta name="keywords"
+    content="Saad Al Amin, About, Graphic Designer, Film Maker, Artist, Official, Website, Saad, Muktir Ghonta, Videophics" />
+  <meta name="author" content="Saad Al Amin" />
+  <meta name="creator" content="Mohammad Sefatullah" />
+  <meta name="robots" content="index, work, contact, about" />
+
+
   <!-- Stylesheet -->
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Poppins">
@@ -35,8 +53,7 @@
             <p>Email address</p>
             <input type="email" placeholder="Your email address" required>
             <p>Message</p>
-            <textarea style="height: 100px;resize: none;"
-              placeholder="Your message here" required></textarea>
+            <textarea style="height: 100px;resize: none;" placeholder="Your message here" required></textarea>
             <br>
             <button>Send</button>
           </div>
