--- a/index.html
+++ b/index.html
@@ -79,6 +79,16 @@
                     <a href="https://www.instagram.com/saadalamin2004/"><img src="image/social/instagram.png"></a>
 
                     <a href="https://soundcloud.com/saadalamin04"><img src="image/social/soundcloud.png"></a>
+
+                    <a href="https://music.amazon.com/artists/B096WC27H3/saad-al-amin?marketplaceId=ATVPDKIKX0DER&musicTerritory=US"><img src="image/social/amazon.png"></a>
+
+                    <a href="https://open.spotify.com/artist/0TjhCbB10JrsKa5AIO0o6K?si=PEdO0M-aTJO-pKymi6s4Ww&dl_branch=1"><img src="image/social/spotify.png"></a>
+
+                    <a href=" https://music.apple.com/in/album/ashbe-alo-firey-remix-single/1571336173"><img src="image/social/apple.png"></a>
+
+                    <a href="https://deezer.page.link/G7mmyatW2SZAy88a8"><img src="image/social/deezer.png"></a>
+
+                    <a href="https://www.shazam.com/artist/212973433/saad-al-amin"><img src="image/social/shazam.png"></a>
                 </div>
                 <div class="copyright">
                     Created by <a href="https://www.facebook.com/mohammadsefatullah0">Mohammad Sefatullah</a>
