--- a/about.html
+++ b/about.html
@@ -57,6 +57,45 @@
         </div>
       </div>
     </div>
+    <div id="footer">
+      <div id="main">
+          <p>
+              Follow Me
+          </p>
+          <div class="follow">
+
+              <a href="https://www.facebook.com/saadalamin0"><img src="image/social/facebook.png"></a>
+
+              <a href="https://www.youtube.com/channel/UCJDZXsZRAhhdENfKXQQNI_w"><img
+                      src="image/social/youtube.png"></a>
+
+              <a href="https://www.linkedin.com/in/saadalamin"><img src="image/social/linkedin.png"></a>
+
+              <a href="https://filmfreeway.com/saadalamin"><img src="image/social/film.png"></a>
+
+              <a href="https://vimeo.com/saadalamin"><img src="image/social/vimo.png"></a>
+
+              <a href="https://www.behance.net/saadalamin"><img src="image/social/behance.png"></a>
+
+              <a href="https://www.instagram.com/saadalamin2004/"><img src="image/social/instagram.png"></a>
+
+              <a href="https://soundcloud.com/saadalamin04"><img src="image/social/soundcloud.png"></a>
+
+              <a href="https://music.amazon.com/artists/B096WC27H3/saad-al-amin?marketplaceId=ATVPDKIKX0DER&musicTerritory=US"><img src="image/social/amazon.png"></a>
+
+              <a href="https://open.spotify.com/artist/0TjhCbB10JrsKa5AIO0o6K?si=PEdO0M-aTJO-pKymi6s4Ww&dl_branch=1"><img src="image/social/spotify.png"></a>
+
+              <a href=" https://music.apple.com/in/album/ashbe-alo-firey-remix-single/1571336173"><img src="image/social/apple.png"></a>
+
+              <a href="https://deezer.page.link/G7mmyatW2SZAy88a8"><img src="image/social/deezer.png"></a>
+
+              <a href="https://www.shazam.com/artist/212973433/saad-al-amin"><img src="image/social/shazam.png"></a>
+          </div>
+          <div class="copyright">
+              Created by <a href="https://www.facebook.com/mohammadsefatullah0">Mohammad Sefatullah</a>
+          </div>
+      </div>
+  </div>
   </div>
 
   <script type="text/javascript" src="js/app.js"></script>
